--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <!-- Common -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>When can I eat?</title>
+  <title>When to eat?</title>
   <meta name="description" content="Intermittent fasting timer">
   <meta name="image" content="https://i.imgur.com/wTAVqy5.jpg">
   <meta name="theme-color" content="#212121">
