--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
   <meta name="twitter:creator" content="@yourusername">
   <meta name="twitter:image:src" content="https://i.imgur.com/wTAVqy5.jpg">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="Hello World">
+  <meta name="og:title" content="When To Eat">
   <meta name="og:description" content="Intermittent fasting timer">
   <meta name="og:image" content="https://i.imgur.com/wTAVqy5.jpg">
   <meta name="og:url" content="https://example.com">
-  <meta name="og:site_name" content="Hello World">
+  <meta name="og:site_name" content="When To Eat">
   <meta name="fb:admins" content="YOUR_FACEBOOK_ID">
   <meta name="og:type" content="website">
   <!-- Styles & Favicons -->
